# allen-haskell-programming

./: cabal.project  chapter-definitions.org  hie.yaml  stack.yaml
book-source-code/: WordNumberTest.hs
ch14-failure/: failure.cabal  package.yaml
ch14-failure/test/: FailureTest.hs
ch14-hangman-testing/: hangman-testing.cabal  package.yaml
ch14-hangman-testing/app/: HangmanApp.hs  Main.hs
ch14-hangman-testing/src/: Hangman.hs
ch14-hangman-testing/test/: HangmanTest.hs  Spec.hs
ch14-idempotence/: idempotence.cabal  package.yaml
ch14-idempotence/test/: IdempotenceTest.hs
ch14-make-a-gen-random-generator/: make-a-gen-random-generator.cabal  package.yaml
ch14-make-a-gen-random-generator/test/: RandomGenTest.hs
ch14-using-quickcheck/: package.yaml  using-quickcheck.cabal
ch14-using-quickcheck/src/: UsingQuickCheck.hs
ch14-using-quickcheck/test/: UsingQuickCheckTest.hs
ch14-validating-ciphers/: package.yaml  validating-ciphers.cabal
ch14-validating-ciphers/src/: Ciphers.hs
ch14-validating-ciphers/test/: CiphersTest.hs
ch14-validating-numbers-into-words/: package.yaml  validating-numbers-into-words.cabal
ch14-validating-numbers-into-words/src/: WordNumber.hs
ch14-validating-numbers-into-words/test/: WordNumberTest.hs
