cabal-version:      3.6
name:               validating-numbers-into-words
version:            0.1.0.0
synopsis:           Test 'numbers into words' routines

library
    exposed-modules:  WordNumber
    build-depends:    base ^>= 4.16.3
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test-validating-numbers-into-words
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          WordNumberTest.hs
    ghc-options:      -main-is WordNumberTest
    build-depends:
        base ^>= 4.16.3
      , validating-numbers-into-words
      , hspec ^>= 2.10.6
